--- a/18.3-activities/01_transforms/unsolved/index.html
+++ b/18.3-activities/01_transforms/unsolved/index.html
@@ -15,5 +15,16 @@
         <div class="moveMe"></div>
       </div>
     </section>
+    <section class="grid">
+      <div class="rotate gridChild">
+        <img class="rotateMe" src="images/dog.png">
+      </div>
+      <div class="scale gridChild">
+        <div class="scaleMe"></div>
+      </div>
+      <div class="translate gridChild">
+        <div class="moveMe"></div>
+      </div>
+    </section>
   </body>
 </html>
